--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-react-native-shinpei",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -32,6 +32,7 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
     "eslint-plugin-react-native": "^3.8.1",
+    "eslint-plugin-json": "^2.0.1",
     "prettier": "^1.18.2",
     "typescript": "^3.7.2",
     "eslint": "^6.6.0",
