--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "eslint-config-react-native-shinpei",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "eslint config for babel-import + ts + react-native",
   "main": "index.js",
   "keywords": [
     "eslint config",
     "shinpei",
     "react native",
-    "zusinShinpei"
+    "zusinShinpei",
+    "eslint"
   ],
   "repository": {
     "type": "git",
@@ -32,7 +33,7 @@
     "eslint-plugin-react-native": "^3.8.1",
     "eslint-plugin-json": "^2.0.1",
     "prettier": "^1.18.2",
-    "typescript": "^3.7.2",
+    "typescript": "^3.7.3",
     "eslint": "^6.6.0",
     "eslint-config-react-native-wcandillon": "^2.1.0"
   }
